Fix map sizing on mobile devices.

--- a/fantasy-maps/src/app/app.component.css
+++ b/fantasy-maps/src/app/app.component.css
@@ -11,13 +11,7 @@ app-navbar {
 }
 
 .sidenav-container {
-  width: 100%;
-  height: 100vh;
   border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.sidenav-content {
-  height: 100vh;
 }
 
 .sidenav {
